# heroku-rust-boilerplate

./: .env  Cargo.toml  LICENSE  LICENSE.nolicense  Procfile  README.md  app.json
migrations/2019-09-24-013651_create_rustaceans/: down.sql  up.sql
public/: index.html
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  views.rs
src/app/: mod.rs
templates/: index.html.tera  layout.html.tera
