[package]
name = "heroku-rust-boilerplate"
version = "0.1.0"
authors = ["Jon Daniel <binarycleric@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
rocket = "0.4.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["serve"]